# qpOASES

./: .gitignore  CMakeLists.txt  package.xml
config/: controller_param.yaml  parameters.yaml
examples/: dof2.cpp  dof2.py  dynamic_3_goals.py  dynamic_weights.py  goal_range.html  goal_range.py  join_eef_goal.cpp  joint_eef_goal.cpp  joint_eef_goal_py.py  multiple_goals.py  selecting_goal.py  vel_example.cpp
src/: dynamic_3_goals.py  selecting_goal.py
